Revision 0.4.0, released 10-07-2021
-----------------------------------
- Added opentypemap to manage the open type maps for all modules
- Add RFC9092 providing CMS Content Type for Geofeed Data

Revision 0.3.2, released 14-06-2021
-----------------------------------
- Modified RFC5280 to use CRLNumber() in the extensions opentype map.

Revision 0.3.1, released 13-06-2021
-----------------------------------
- Add RFC4056 providing RSASSA-PSS Signature Algorithm in CMS
- Add RFC4059 providing Warranty Certificate Extension
- Add RFC4262 providing S/MIME Capabilities Certificate Extension
- Add RFC4998 providing Evidence Record Syntax (ERS)
- Add RFC5055 providing Server-Based Certificate Validation Protocol (SCVP)
- Add RFC5276 providing SCVP updates to convey Long-Term Evidence Records
- Add RFC5544 providing the TimeStampedData Content Type
- Add RFC6066 providing PkiPath for the pkix-pkipath media type
- Add RFC6492 providing a protocol for provisioning RPKI certificates
- Add RFC6962 providing Certificate Transparency
- Add RFC7693 providing BLAKE2 Cryptographic Hash and MAC
- Add RFC7836 providing algorithms identifiers and parameters for
  GOST R 34.10-2012 and GOST R 34.11-2012
- Modified RFC4357 to support the new parameter set in RFC7836
- Add RFC8994 providing ACP Node Name in X.509 Certificates
- Add RFC8995 providing the masa-url certificate extension used by BRSKI
- Add RFC9044 providing algorithm identifiers for AES-GMAC
- Modified RFC4055 to include the PKCS#1 v1.5 algorithm identifiers
- Add RFC2040 providing identifiers for RC5
- Add RFC2528 providing identifiers for the Key Exchange Algorithm (KEA)
- Add RFC3217 providing identifiers for Triple-DES and RC2 Key Wrapping 
- Add RFC3874 providing identifiers for SHA-224
- Add RFC4231 providing identifiers for HMAC-SHA-224, HMAC-SHA-256,
  HMAC-SHA-384, and HMAC-SHA-512
- Add RFC6484 providing the RPKI Certificate Policy identifier
- Add RFC6493 providing the RPKI Ghostbusters Record