@@ -3,6 +3,10 @@
 # This file is part of pyasn1-alt-modules software.
 #
 # Created by Stanisław Pitucha with asn1ate tool.
+# Modified by Russ Housley to import from RFC 5280 instead of RFC 3280, to
+#   import from RFC 5252 instead of RFC 3852, and to include an opentype map
+#   for AttributeTypeAndValue.
+#
 # Copyright (c) 2005-2020, Ilya Etingof <etingof@gmail.com>
 # Copyright (c) 2021, Vigil Security, LLC
 # License: http://vigilsec.com/pyasn1-alt-modules-license.txt
@@ -17,11 +21,15 @@ from pyasn1.type import char
 from pyasn1.type import constraint
 from pyasn1.type import namedtype
 from pyasn1.type import namedval
+from pyasn1.type import opentype
 from pyasn1.type import tag
 from pyasn1.type import univ
 
-from pyasn1_alt_modules import rfc3280
-from pyasn1_alt_modules import rfc3852
+from pyasn1_alt_modules import rfc5280
+from pyasn1_alt_modules import rfc5652
+from pyasn1_alt_modules import opentypemap
+
+cmsAttributesMap = opentypemap.get('cmsAttributesMap')
 
 MAX = float('inf')
 
@@ -51,7 +59,7 @@ class SinglePubInfo(univ.Sequence):
 SinglePubInfo.componentType = namedtype.NamedTypes(
     namedtype.NamedType('pubMethod', univ.Integer(
         namedValues=namedval.NamedValues(('dontCare', 0), ('x500', 1), ('web', 2), ('ldap', 3)))),
-    namedtype.OptionalNamedType('pubLocation', rfc3280.GeneralName())
+    namedtype.OptionalNamedType('pubLocation', rfc5280.GeneralName())
 )
 
 
@@ -64,7 +72,7 @@ class PKMACValue(univ.Sequence):
 
 
 PKMACValue.componentType = namedtype.NamedTypes(
-    namedtype.NamedType('algId', rfc3280.AlgorithmIdentifier()),
+    namedtype.NamedType('algId', rfc5280.AlgorithmIdentifier()),
     namedtype.NamedType('value', univ.BitString())
 )
 
@@ -78,7 +86,7 @@ POPOSigningKeyInput.componentType = namedtype.NamedTypes(
         'authInfo', univ.Choice(
             componentType=namedtype.NamedTypes(
                 namedtype.NamedType(
-                    'sender', rfc3280.GeneralName().subtype(implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatConstructed, 0))
+                    'sender', rfc5280.GeneralName().subtype(implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatConstructed, 0))
                 ),
                 namedtype.NamedType(
                     'publicKeyMAC', PKMACValue()
@@ -86,7 +94,7 @@ POPOSigningKeyInput.componentType = namedtype.NamedTypes(
             )
         )
     ),
-    namedtype.NamedType('publicKey', rfc3280.SubjectPublicKeyInfo())
+    namedtype.NamedType('publicKey', rfc5280.SubjectPublicKeyInfo())
 )
 
 
@@ -97,7 +105,7 @@ class POPOSigningKey(univ.Sequence):
 POPOSigningKey.componentType = namedtype.NamedTypes(
     namedtype.OptionalNamedType('poposkInput', POPOSigningKeyInput().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatConstructed, 0))),
-    namedtype.NamedType('algorithmIdentifier', rfc3280.AlgorithmIdentifier()),
+    namedtype.NamedType('algorithmIdentifier', rfc5280.AlgorithmIdentifier()),
     namedtype.NamedType('signature', univ.BitString())
 )
 
@@ -106,7 +114,7 @@ class Attributes(univ.SetOf):
     pass
 
 
-Attributes.componentType = rfc3280.Attribute()
+Attributes.componentType = rfc5280.Attribute()
 
 
 class PrivateKeyInfo(univ.Sequence):
@@ -115,7 +123,7 @@ class PrivateKeyInfo(univ.Sequence):
 
 PrivateKeyInfo.componentType = namedtype.NamedTypes(
     namedtype.NamedType('version', univ.Integer()),
-    namedtype.NamedType('privateKeyAlgorithm', rfc3280.AlgorithmIdentifier()),
+    namedtype.NamedType('privateKeyAlgorithm', rfc5280.AlgorithmIdentifier()),
     namedtype.NamedType('privateKey', univ.OctetString()),
     namedtype.OptionalNamedType('attributes',
                                 Attributes().subtype(implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatSimple, 0)))
@@ -127,13 +135,13 @@ class EncryptedValue(univ.Sequence):
 
 
 EncryptedValue.componentType = namedtype.NamedTypes(
-    namedtype.OptionalNamedType('intendedAlg', rfc3280.AlgorithmIdentifier().subtype(
+    namedtype.OptionalNamedType('intendedAlg', rfc5280.AlgorithmIdentifier().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatSimple, 0))),
-    namedtype.OptionalNamedType('symmAlg', rfc3280.AlgorithmIdentifier().subtype(
+    namedtype.OptionalNamedType('symmAlg', rfc5280.AlgorithmIdentifier().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatSimple, 1))),
     namedtype.OptionalNamedType('encSymmKey', univ.BitString().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatSimple, 2))),
-    namedtype.OptionalNamedType('keyAlg', rfc3280.AlgorithmIdentifier().subtype(
+    namedtype.OptionalNamedType('keyAlg', rfc5280.AlgorithmIdentifier().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatSimple, 3))),
     namedtype.OptionalNamedType('valueHint', univ.OctetString().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatSimple, 4))),
@@ -147,7 +155,7 @@ class EncryptedKey(univ.Choice):
 
 EncryptedKey.componentType = namedtype.NamedTypes(
     namedtype.NamedType('encryptedValue', EncryptedValue()),
-    namedtype.NamedType('envelopedData', rfc3852.EnvelopedData().subtype(
+    namedtype.NamedType('envelopedData', rfc5652.EnvelopedData().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatSimple, 0)))
 )
 
@@ -176,7 +184,7 @@ id_regInfo = _buildOid(id_pkip, 2)
 id_regInfo_certReq = _buildOid(id_regInfo, 2)
 
 
-class ProtocolEncrKey(rfc3280.SubjectPublicKeyInfo):
+class ProtocolEncrKey(rfc5280.SubjectPublicKeyInfo):
     pass
 
 
@@ -200,7 +208,8 @@ class AttributeTypeAndValue(univ.Sequence):
 
 AttributeTypeAndValue.componentType = namedtype.NamedTypes(
     namedtype.NamedType('type', univ.ObjectIdentifier()),
-    namedtype.NamedType('value', univ.Any())
+    namedtype.NamedType('value', univ.Any(),
+        openType=opentype.OpenType('type', cmsAttributesMap))
 )
 
 
@@ -217,7 +226,7 @@ POPOPrivKey.componentType = namedtype.NamedTypes(
                         univ.BitString().subtype(implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatSimple, 2))),
     namedtype.NamedType('agreeMAC',
                         PKMACValue().subtype(implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatConstructed, 3))),
-    namedtype.NamedType('encryptedKey', rfc3852.EnvelopedData().subtype(
+    namedtype.NamedType('encryptedKey', rfc5652.EnvelopedData().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatSimple, 4)))
 )
 
@@ -243,9 +252,9 @@ class OptionalValidity(univ.Sequence):
 
 
 OptionalValidity.componentType = namedtype.NamedTypes(
-    namedtype.OptionalNamedType('notBefore', rfc3280.Time().subtype(
+    namedtype.OptionalNamedType('notBefore', rfc5280.Time().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatConstructed, 0))),
-    namedtype.OptionalNamedType('notAfter', rfc3280.Time().subtype(
+    namedtype.OptionalNamedType('notAfter', rfc5280.Time().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatConstructed, 1)))
 )
 
@@ -255,25 +264,25 @@ class CertTemplate(univ.Sequence):
 
 
 CertTemplate.componentType = namedtype.NamedTypes(
-    namedtype.OptionalNamedType('version', rfc3280.Version().subtype(
+    namedtype.OptionalNamedType('version', rfc5280.Version().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatSimple, 0))),
     namedtype.OptionalNamedType('serialNumber', univ.Integer().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatSimple, 1))),
-    namedtype.OptionalNamedType('signingAlg', rfc3280.AlgorithmIdentifier().subtype(
+    namedtype.OptionalNamedType('signingAlg', rfc5280.AlgorithmIdentifier().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatSimple, 2))),
-    namedtype.OptionalNamedType('issuer', rfc3280.Name().subtype(
+    namedtype.OptionalNamedType('issuer', rfc5280.Name().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatConstructed, 3))),
     namedtype.OptionalNamedType('validity', OptionalValidity().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatConstructed, 4))),
-    namedtype.OptionalNamedType('subject', rfc3280.Name().subtype(
+    namedtype.OptionalNamedType('subject', rfc5280.Name().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatConstructed, 5))),
-    namedtype.OptionalNamedType('publicKey', rfc3280.SubjectPublicKeyInfo().subtype(
+    namedtype.OptionalNamedType('publicKey', rfc5280.SubjectPublicKeyInfo().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatSimple, 6))),
-    namedtype.OptionalNamedType('issuerUID', rfc3280.UniqueIdentifier().subtype(
+    namedtype.OptionalNamedType('issuerUID', rfc5280.UniqueIdentifier().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatSimple, 7))),
-    namedtype.OptionalNamedType('subjectUID', rfc3280.UniqueIdentifier().subtype(
+    namedtype.OptionalNamedType('subjectUID', rfc5280.UniqueIdentifier().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatSimple, 8))),
-    namedtype.OptionalNamedType('extensions', rfc3280.Extensions().subtype(
+    namedtype.OptionalNamedType('extensions', rfc5280.Extensions().subtype(
         implicitTag=tag.Tag(tag.tagClassContext, tag.tagFormatSimple, 9)))
 )
 
@@ -328,7 +337,7 @@ class CertId(univ.Sequence):
 
 
 CertId.componentType = namedtype.NamedTypes(
-    namedtype.NamedType('issuer', rfc3280.GeneralName()),
+    namedtype.NamedType('issuer', rfc5280.GeneralName()),
     namedtype.NamedType('serialNumber', univ.Integer())
 )
 
@@ -358,7 +367,7 @@ EncKeyWithID.componentType = namedtype.NamedTypes(
         'identifier', univ.Choice(
             componentType=namedtype.NamedTypes(
                 namedtype.NamedType('string', char.UTF8String()),
-                namedtype.NamedType('generalName', rfc3280.GeneralName())
+                namedtype.NamedType('generalName', rfc5280.GeneralName())
             )
         )
     )
@@ -377,9 +386,9 @@ class PBMParameter(univ.Sequence):
 
 PBMParameter.componentType = namedtype.NamedTypes(
     namedtype.NamedType('salt', univ.OctetString()),
-    namedtype.NamedType('owf', rfc3280.AlgorithmIdentifier()),
+    namedtype.NamedType('owf', rfc5280.AlgorithmIdentifier()),
     namedtype.NamedType('iterationCount', univ.Integer()),
-    namedtype.NamedType('mac', rfc3280.AlgorithmIdentifier())
+    namedtype.NamedType('mac', rfc5280.AlgorithmIdentifier())
 )
 
 id_regCtrl_regToken = _buildOid(id_regCtrl, 1)
@@ -395,3 +404,17 @@ id_ct_encKeyWithID = _buildOid(id_ct, 21)
 
 class RegToken(char.UTF8String):
     pass
+
+
+# Update the CMS Attribute Map
+
+_cmsAttributesMapUpdate = {
+    id_regCtrl_regToken: RegToken(),
+    id_regCtrl_authenticator: Authenticator(),
+    id_regCtrl_pkiPublicationInfo: PKIPublicationInfo(),
+    id_regCtrl_pkiArchiveOptions: PKIArchiveOptions(),
+    id_regCtrl_oldCertID: OldCertId(),
+    id_regCtrl_protocolEncrKey: rfc5280.SubjectPublicKeyInfo(),
+}
+
+cmsAttributesMap.update(_cmsAttributesMapUpdate)
